Добавил работу с бортиками.